Fix theme flickers

--- a/crates/wesl_docs_generator/static/css/styles.css
+++ b/crates/wesl_docs_generator/static/css/styles.css
@@ -30,7 +30,7 @@ h6 {
   border-bottom: 1px solid var(--nav-border-color);
 }
 
-#toggleTheme {
+.toggle-theme {
   margin-left: auto;
   border: none;
   background-color: transparent;
