--- a/crates/wesl_docs_generator/static/css/themes.css
+++ b/crates/wesl_docs_generator/static/css/themes.css
@@ -69,3 +69,11 @@
   --scrollbar-thumb-background-color: #888;
   --scrollbar-thumb-hover-background-color: #777;
 }
+
+:root[data-theme="dark"] .is-light-theme {
+  display: none;
+}
+
+:root[data-theme="light"] .is-dark-theme {
+  display: none;
+}
